--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Recent Journal Articles</title>
     <link rel="stylesheet" href="10_css.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="script.js"></script>
+    <script src="DOM_Manipulation.js"></script>
 </head>
 
 <body>
@@ -221,5 +221,6 @@
         </footer>
     </main>
 </body>
+
 
 </html>
